--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
   <data>
     <variable
         name="viewModel"
-        type="io.github.ovso.shortcuts.MainViewModel"
+        type="io.github.ovso.shortcuts.view.ui.main.MainViewModel"
         />
   </data>
   <androidx.drawerlayout.widget.DrawerLayout
