--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,6 +30,8 @@
       android:layout_height="match_parent"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+      app:spanCount="2"
+      tools:listitem="@layout/item_main"
       />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
