--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -15,26 +15,26 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:background="?android:attr/selectableItemBackground"
+      android:clickable="true"
       >
-    <androidx.cardview.widget.CardView
+    <TextView
+        android:id="@+id/textview_main_item_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="2"
+        android:text="@{viewModel.title}"
+        android:textColor="#FF4A4A4A"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintDimensionRatio="6:2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="Adobe Illustrator"
         >
-      <TextView
-          android:id="@+id/textview_main_item_title"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:gravity="center"
-          android:maxLines="2"
-          android:textSize="25sp"
-          android:text="@{viewModel.title}"
-          tools:text="Adobe Illustrator"
-          />
-    </androidx.cardview.widget.CardView>
+    </TextView>
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
