--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -16,6 +16,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?android:attr/selectableItemBackground"
+      android:onClick="@{viewModel.onClick}"
       >
     <TextView
         android:id="@+id/textview_main_item_title"
