--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,17 @@
     <item name="android:windowBackground">@drawable/splash_background</item>
   </style>
 
+  <style name="ProgressBarHorizontal" parent="android:Widget.ProgressBar.Horizontal">
+    <item name="android:minHeight">40dip</item>
+    <item name="android:maxHeight">40dip</item>
+    <item name="android:progressDrawable">@drawable/progress_horizontal_web</item>
+  </style>
+
+  <style name="WebviewNavigationButtonStyle">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:layout_weight">1</item>
+    <item name="android:background">?android:attr/selectableItemBackground</item>
+  </style>
+
 </resources>
