Change icon, Setting userCleartextTraffic

--- a/app/src/main/res/layout/layout_web_navigation.xml
+++ b/app/src/main/res/layout/layout_web_navigation.xml
@@ -52,7 +52,7 @@
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/button_web_nav_browser"
         android:scaleType="center"
-        app:srcCompat="@drawable/ic_open_in_browser"
+        app:srcCompat="@drawable/ic_chrome"
         style="@style/WebviewNavigationButtonStyle"
         />
   </LinearLayout>
