--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,36 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-  <group android:checkableBehavior="single">
+  <group>
     <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_menu_camera"
-        android:title="@string/menu_home"/>
+        android:id="@+id/nav_help"
+        android:icon="@drawable/ic_help"
+        android:title="@string/menu_help"/>
     <item
-        android:id="@+id/nav_gallery"
-        android:icon="@drawable/ic_menu_gallery"
-        android:title="@string/menu_gallery"/>
-    <item
-        android:id="@+id/nav_slideshow"
-        android:icon="@drawable/ic_menu_slideshow"
-        android:title="@string/menu_slideshow"/>
-    <item
-        android:id="@+id/nav_tools"
-        android:icon="@drawable/ic_menu_manage"
-        android:title="@string/menu_tools"/>
+        android:id="@+id/nav_opensource"
+        android:icon="@drawable/ic_open_source"
+        android:title="@string/menu_opensource"/>
   </group>
-
-  <item android:title="Communicate">
+  <item android:title="Communication">
     <menu>
       <item
           android:id="@+id/nav_share"
           android:icon="@drawable/ic_menu_share"
           android:title="@string/menu_share"/>
       <item
-          android:id="@+id/nav_send"
-          android:icon="@drawable/ic_menu_send"
-          android:title="@string/menu_send"/>
+          android:id="@+id/nav_review"
+          android:icon="@drawable/ic_review"
+          android:title="@string/menu_review"/>
     </menu>
   </item>
-
 </menu>
