Localizing, Added Eclipse on apps.json

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ic_open_source"
         android:title="@string/menu_opensource"/>
   </group>
-  <item android:title="Communication">
+  <item android:title="@string/nav_communication">
     <menu>
       <item
           android:id="@+id/nav_share"
