--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -5,6 +5,6 @@
     <bitmap
         android:gravity="center"
         android:mipMap="true"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:src="@drawable/command"/>
   </item>
 </layer-list>
