--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
 
   <style name="AppTheme.Launcher" parent="AppTheme.NoActionBar">
     <item name="android:windowBackground">@drawable/splash_background</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
   </style>
 
   <style name="ProgressBarHorizontal" parent="android:Widget.ProgressBar.Horizontal">
