--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -24,11 +24,19 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <FrameLayout
-      android:id="@+id/container"
+  <LinearLayout
+      android:id="@+id/linearlayout_web_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
-      />
+      >
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+  </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
